# long_arihmetic

./: CMakeLists.txt  bignum.cpp  bignum.hpp  help.txt  main.cpp
big_num/: CMakeLists.txt  big_num.cpp
big_num/include_bn/: big_num.hpp
tests/: CMakeLists.txt  Calc_pi_tests.cpp  add_tests.cpp  constructor_tests.cpp
